@@ -17,3 +17,8 @@
  * Made server.py testable and added tests.
 
  * Made different responses for POST requests and different paths.
+
+ 2014-01-23 Justin Fila <filajust@msu.edu>
+
+ * Looks great! I found one index out of bounds error, left a comment where
+ * I think it can be fixed
